# MacClionOpenGLDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test
glad/include/glad/: glad.h
glad/src/: glad.c
glm/detail/: func_noise.inl
glm/gtc/: matrix_transform.hpp  quaternion.hpp
glm/gtx/: intersect.hpp  io.hpp  norm.hpp  simd_mat4.hpp  simd_quat.hpp
include/: LearnShader.h  Mesh.h  Model.h  Shader.h  camera.h
shaderFiles/: 1.colors.fs  2.2.basic_lighting.fs  2.2.basic_lighting.vs  2.2.light_cube.fs  3.1.materials.fs  3.1.materials.vs  4.1.light_cube.fs  4.1.light_cube.vs  4.1.lighting_maps.fs  4.1.lighting_maps.vs  4.2.light_cube.fs  4.2.light_cube.vs  4.2.lighting_maps.fs  4.2.lighting_maps.vs  4.2.texture.fs  4.2.texture.vs  5.1.transform.fs  5.1.transform.vs  6.1.coordinate_systems.fs  6.1.coordinate_systems.vs  6.2.cubemaps.fs  6.2.cubemaps.vs  6.2.skybox.fs  6.2.skybox.vs  6.3.coordinate_systems.fs  6.3.coordinate_systems.vs
src/: Shader.cpp
